Details
-
Bug
-
Status: Resolved
-
Blocker
-
Resolution: Fixed
-
Impala 2.2
-
None
Description
If target table are empty, the following query
insert overwrite target_table select * from src_table limit 0;
will throw warning
WARNINGS: Could not list directory: hdfs://localhost:20500/test-warehouse/target_table
This is caused by an HDFS bug https://issues.apache.org/jira/browse/HDFS-8407
hdfsListDirectory() returns NULL when the directory is empty.
According to the API doc, it should only return NULL when there is an error.
In pre 2.2 version, we don't hit this HDFS bug because of IMPALA-1438 so the directory will not be empty.